# lmon

./: .gitignore  CMakeLists.txt  README.md  central_config.h.in  init-lmon.csh  init-lmon.sh  init_vis.mac  init_vis_lowQ2.mac  lgen_5x41_0p5min_12evt.tx  run.cxx  run.mac  run_eic.mac  run_local.mac  run_lowQ2.mac  vis.mac  visualize.mac
analysis/: CMakeLists.txt
analysis/ini/: rp_counters.ini  rp_reco_apply.ini  rp_reco_create.ini  spect_reco_apply.ini  spect_reco_create.ini  spectrometer.ini  tagger_counters.ini
analysis/src/: AnaRPCounters.cxx  AnaRPRecoApply.cxx  AnaRPRecoCreate.cxx  AnaSpect.cxx  AnaSpectRecoApply.cxx  AnaSpectRecoCreate.cxx  AnaTaggerCounters.cxx  RecoBPC.cxx
analysis_tasks/: CMakeLists.txt
analysis_tasks/include/: AnaMapsBasic.h  AnaMapsBasicVis.h  AnaMapsRecoResp.h  AnaPhotTime.h  RefCounter.h
analysis_tasks/ini/: AnaMapsBasic.ini  AnaMapsRecoResp.ini  AnaPhotTime.ini
analysis_tasks/run_macros/: run_AnaMapsBasic.py  run_AnaMapsBasicVis.py  run_AnaMapsRecoResp.py  run_AnaPhotTime.py
analysis_tasks/src/: AnaMapsBasic.cxx  AnaMapsBasicVis.cxx  AnaMapsRecoResp.cxx  AnaPhotTime.cxx  RefCounter.cxx
calo/: CMakeLists.txt
calo/include/: CalPWO.h  CalPWOHits.h  CaloBuilder.h  HcalA262.h  PhotoCathPMT.h  PhotoHits.h  PhotoHitsV2.h  PhotoHitsV2Coll.h  UcalA290.h  WScFiZX.h  WScFiZXv2.h  WScFiZXv3.h
calo/macro/: geom_calo.in  gui.mac  init_vis.mac  run_1GeV.mac  run_1MeV.mac  vis.mac
calo/macro/HcalA262/: convert_df.py  convert_h5.py  convert_txtcsv.py  plot_edep.py  plot_muons.py  plot_res.py  plots_alpha.py
calo/macro/PWO/: geom_pwo_cell.in  geom_pwo_module.in  hits_reader.py  run_pwo_batch.mac  run_pwo_gps.mac  time_plots.py  visualize.mac
calo/macro/UcalA290/: convert_h5.py  convert_txtcsv.py  plots.py  print_gen.py  read_time.py
calo/macro/ZDC/: geom_zdc.in  print_sum.py  run_zdc_batch.mac
calo/src/: CalPWO.cxx  CalPWOHits.cxx  CaloBuilder.cxx  HcalA262.cxx  PhotoCathPMT.cxx  PhotoHits.cxx  PhotoHitsV2.cxx  PhotoHitsV2Coll.cxx  UcalA290.cxx  WScFiZX.cxx  WScFiZXv2.cxx  WScFiZXv3.cxx
central/: CMakeLists.txt
central/include/: BoxCalR.h  CentralBuilder.h  SolenoidBeAST.h
central/src/: BoxCalR.cxx  CentralBuilder.cxx  SolenoidBeAST.cxx
config/: central_beampipe.in  forward_beamline.in  geom_all.in  geom_beam-gas.in  geom_beamline.in  geom_beamline_18GeV.in  geom_beamline_close.in  geom_beamline_noquad.in  geom_beampipe.in  geom_calo.in  geom_central.in  geom_central_close.in  geom_close_all.in  geom_lowQ2.in  geom_lumi.in  geom_lumi_v2.in  geom_test.in  vacuum.in
config/pro1/: geom_all.in  geom_beamline_18GeV.in  geom_lumi_v2.in  vacuum.in
config/pro2/: beam_magnets_pro2.in  central_beampipe_pro2.in  geom_lowQ2_pro2.in  geom_pro2.in  vacuum_pro2.in
config/rp1/: beam_magnets_rp1.in  central_beampipe_rp1.in  fields_18GeV_rp1.in  geom_rp1.in  lumi_rp1.in  tag_maps_rp1.in  tag_rp1.in  vacuum_rp1.in
config/rp2/: geom_rp2.in  tag_ew_rp2.in  tag_maps_rp2.in  tag_pwo_rp2.in  vacuum_rp2.in
include/: ActionInitialization.h  BeamDrift.h  BeamMagnet.h  BeamMagnetV2.h  BeamPipeV1.h  BeamQuadrupole.h  BoxCal.h  BoxCalV2.h  BoxSegment.h  CaloBPC.h  CaloBPCHits.h  Cell.h  CenBeampipeEl.h  Collimator.h  CollimatorV2.h  ColorDecoder.h  CompCal.h  ComponentBuilder.h  ConeAperture.h  ConeBeam.h  CylBeam.h  CylSegment.h  DetUtils.h  Detector.h  DetectorConstruction.h  DetectorData.h  EThetaPhiReco.h  EventAction.h  ExitWinZEUS.h  ExitWindow.h  ExitWindowV1.h  ExitWindowV2.h  GenParticle.h  GenReader.h  GeneratorAction.h  GeoParser.h  GraphiteFilter.h  HEPEvtInterface.h  HepMC3Reader.h  LgenReader.h  (+24 more)
macro/: BoxCalV2Hits.py  ParticleCounterHits.py  TagV2Evt.py  acc_Q2_calc.C  acc_Q2_kine.h  calib.py  det_sigma.py  event_rate.py  get_Q2_acc.C  get_acc.C  get_ew_conv.C  parameter_descriptor.py  plot_cells.py  plot_utils.py  plots.py  plots_Q2_acc.py  plots_Q2_evt.py  plots_Q2_sigma.py  plots_ew.py  plots_ew12.py  plots_kine_acc.py  plots_lowQ2.py  plots_lowQ2_hits.py  plots_lumi_hits.py  read_con.py  recchar_s1.ini  recchar_s2.ini  spec_acc.py
macro/CaloBPC/: geom_bpc.in  make_scin_edep.py  plots_edep.py  reco_bpc.ini  run.mac  run_scin_edep.py  vis.mac  xrec.py
macro/Q2rec/: create_rmat.py  plot_comp.py  plots_Rijk.py  plots_rec.py  rec_s1.ini  rec_s2.ini  reconstruct.py  rmat.py  run_rec.py  tjk.py
macro/beam_gas/: init.sh  plot_hits.py  plot_rate.py  plots.py  run_beampipe.py
macro/beam_gas/rcalc/: CMakeLists.txt  rcalc.i
macro/beam_gas/rcalc/include/: rcalc.h
macro/beam_gas/rcalc/src/: rcalc.cxx
macro/beam_profile/: beam_bkg.py  plots_Q3eR.py  plots_beam.py
macro/dev/: geo_check.py  mcevt_print.py  print_evt.py  run_ttree_selector.py  tparticle_print.py  ttree_selector.py
macro/examples/: read_CaloBPC.py  read_MC.py
macro/gen_plots/: bhgen.py  bhgen_compare.py  el_kin.py  plot_sigma_Q2.py  plots.py  plots_Lif.py  plots_Q2.py  plots_bg.py
macro/geo/: cprint.py  lattice.py  magnet.py  plot_geo.py  plot_lumi.py  plot_pro2.py  segment.py  vacuum.py
macro/lumi_window/: conv_calc.cxx  ew_hits.py  get_bins.cxx  make_ew_trees.py  (+3 more)
polarimetry/: CMakeLists.txt
roman_pots/: CMakeLists.txt
roman_pots/include/: SpectDet.h  SpectPlane.h  TagCounter.h  TagCounterPlane.h  TagMapsBasic.h  TagMapsBasicPlane.h  TagRecoRP.h
roman_pots/src/: SpectDet.cxx  SpectPlane.cxx  TagCounter.cxx  TagCounterPlane.cxx  TagMapsBasic.cxx  TagMapsBasicPlane.cxx  TagRecoRP.cxx
src/: ActionInitialization.cxx  BeamDrift.cxx  BeamMagnet.cxx  BeamMagnetV2.cxx  BeamPipeV1.cxx  BeamQuadrupole.cxx  BoxCal.cxx  BoxCalV2.cxx  BoxSegment.cxx  CaloBPC.cxx  CaloBPCHits.cxx  Cell.cxx  CenBeampipeEl.cxx  Collimator.cxx  CollimatorV2.cxx  ColorDecoder.cxx  CompCal.cxx  ComponentBuilder.cxx  ConeAperture.cxx  ConeBeam.cxx  CylBeam.cxx  CylSegment.cxx  DetectorConstruction.cxx  EThetaPhiReco.cxx  EventAction.cxx  ExitWinZEUS.cxx  ExitWindow.cxx  ExitWindowV1.cxx  ExitWindowV2.cxx  GenParticle.cxx  GenReader.cxx  GeneratorAction.cxx  GeoParser.cxx  GraphiteFilter.cxx  HEPEvtInterface.cxx  HepMC3Reader.cxx  LgenReader.cxx  MCEvent.cxx  MCEvtDat.cxx  Magnet.cxx  (+19 more)
(+49 files in other folders)
